--- a/src/app/pages/dashboard-project/descargables/lean_canvas/lean_print.component.scss
+++ b/src/app/pages/dashboard-project/descargables/lean_canvas/lean_print.component.scss
@@ -72,14 +72,13 @@
 
 .categoria-problema{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -87,14 +86,13 @@
 
 .categoria-problema:hover{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -102,25 +100,23 @@
 
 .solucion-metricas{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
 }
 
 .categoria-solucion{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   //margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -128,14 +124,13 @@
 
 .categoria-solucion:hover{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   //margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -143,14 +138,13 @@
 
 .categoria-metricas{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   margin: 20px 0px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -158,14 +152,13 @@
 
 .categoria-metricas:hover{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   margin: 20px 0px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -173,14 +166,13 @@
 
 .categoria-propuesta{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -188,14 +180,13 @@
 
 .categoria-propuesta:hover{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -203,26 +194,24 @@
 
 .ventajas-canales{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
 
 .categoria-ventajas{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   //margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -230,14 +219,13 @@
 
 .categoria-ventajas:hover{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   //margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -245,14 +233,13 @@
 
 .categoria-canales{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   margin: 20px 0px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -260,14 +247,13 @@
 
 .categoria-canales:hover{  
   width: 300px;
-  height: auto;
-  min-height: 240px;
+  height: 240px;
   margin: 20px 0px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -275,14 +261,13 @@
 
 .categoria-clientes{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -290,14 +275,13 @@
 
 .categoria-clientes:hover{  
   width: 300px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -305,14 +289,13 @@
 
 .categoria-estructuras{  
   width: 780px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -320,14 +303,13 @@
 
 .categoria-estructuras:hover{  
   width: 780px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -335,14 +317,13 @@
 
 .categoria-flujos{  
   width: 780px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -350,14 +331,13 @@
 
 .categoria-flujos:hover{  
   width: 780px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -461,6 +441,11 @@
   padding: 20px 20px 40px 20px;
   margin: auto;
   margin-bottom: 70px;
+  
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
 }
 
 :host {
@@ -477,14 +462,6 @@
       opacity: 1;
       transition: opacity 1s ease-in-out;
     }
-  }
-
-  .videoOn{
-    display: inline;
-  }
-
-  .videoOff{
-    display: none;
   }
 
   // #myVideo{
@@ -517,6 +494,7 @@
   .dark-modal .close {
     color: white !important;
   }
+
 
   /*Ajustes Layout*/
   .notes-container{
@@ -742,51 +720,15 @@
     border: 2px solid green;*/
   }
 
-  @media (max-width: 1200px) {
-    .video-container{
-      text-align: center;
-      position: absolute;
-      width: 100%;
-      margin: -870px 0px 0px 0;
-      padding: 10px;
-
-      video{
-        width: 100%;
-        border-radius: 10px;
-        -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-        -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-        box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-      }
-    }
-  }
-
-  @media (max-width: 993px) {
-    .video-container{
-      text-align: center;
-      position: absolute;
-      width: 100%;
-      margin: -760px 0px 0px 0;
-      padding: 10px;
-
-      video{
-        width: 100%;
-        border-radius: 10px;
-        -webkit-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-        -moz-box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-        box-shadow: 0px 0px 10px 3px rgba(255,255,255,1);
-      }
-    }
-  }
-
-  .notas-listas > li{
+  .lean-container ul,li{
     list-style:none;
   }
-  .notas-listas{
+  .lean-container ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   }
-  .notas-listas > li{
+  .lean-container ul li{
     text-decoration:none;
     color:#000;
     background:#ffc;
@@ -801,31 +743,31 @@
     transition: transform .15s linear;
   }
   
-  .notas-listas > li:nth-child(even){
+  .lean-container ul li:nth-child(even){
     transform:rotate(4deg);
     position:relative;
     top:5px;
     background:#cfc;
   }
-  .notas-listas > li:nth-child(3n){
+  .lean-container ul li:nth-child(3n){
     transform:rotate(-3deg);
     position:relative;
     top:-5px;
     background:#ccf;
   }
-  .notas-listas > li:nth-child(5n){
+  .lean-container ul li:nth-child(5n){
     transform:rotate(5deg);
     position:relative;
     top:-10px;
   }
   
-  .notas-listas > li:hover,ul li:focus{
+  .lean-container ul li:hover,ul li:focus{
     box-shadow:10px 10px 7px rgba(0,0,0,.7);
     transform: scale(1.25);
     position:relative;
     z-index:5;
   }
   
-  .notas-listas > li{
+  .lean-container ul li{
     margin:1em;
   }
