--- a/src/app/pages/dashboard-project/overview/overview.component.html
+++ b/src/app/pages/dashboard-project/overview/overview.component.html
@@ -38,21 +38,21 @@
             <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
               <div class="bullet bg-primary me-3"></div>
               <div class="text-gray-400">En Curso</div>
-              <div class="ms-auto fw-bold text-gray-700">1</div>
+              <div class="ms-auto fw-bold text-gray-700">{{curso}}</div>
             </div>
             <!--end::Label-->
             <!--begin::Label-->
             <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
               <div class="bullet bg-success me-3"></div>
               <div class="text-gray-400">Completados</div>
-              <div class="ms-auto fw-bold text-gray-700">2</div>
+              <div class="ms-auto fw-bold text-gray-700">{{completadas}}</div>
             </div>
             <!--end::Label-->
             <!--begin::Label-->
             <div class="d-flex fs-6 fw-semibold align-items-center mb-3">
               <div class="bullet bg-danger me-3"></div>
               <div class="text-gray-400">Sin iniciar</div>
-              <div class="ms-auto fw-bold text-gray-700">3</div>
+              <div class="ms-auto fw-bold text-gray-700">{{dias}}</div>
             </div>
             <!--end::Label-->
             <!--begin::Label-->
