--- a/src/app/pages/dashboard-project/descargables/scope_canvas/scope_print.component.scss
+++ b/src/app/pages/dashboard-project/descargables/scope_canvas/scope_print.component.scss
@@ -72,14 +72,13 @@
 
 .categoria-necesidades{  
   width: 450px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -87,53 +86,49 @@
 
 .categoria-necesidades:hover{  
   width: 450px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
 }
 
 .left-necesidades{  
-  width: 200px;
-  height: auto;
-  min-height: 500px;
+  width: 160px;
+  height: 500px;
   margin: 30px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
 
 .right-necesidades{  
-  width: 200px;
-  height: auto;
-  min-height: 500px;
+  width: 160px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
 
 .categoria-propositos{  
   width: 450px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -141,14 +136,13 @@
 
 .categoria-propositos:hover{  
   width: 450px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -156,14 +150,13 @@
 
 .categoria-objetivos{  
   width: 450px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -171,14 +164,13 @@
 
 .categoria-objetivos:hover{  
   width: 450px;
-  height: auto;
-  min-height: 500px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -186,39 +178,36 @@
 
 
 .left-objetivos{  
-  width: 200px;
-  height: auto;
-  min-height: 500px;
+  width: 160px;
+  height: 500px;
   margin: 30px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
 
 .right-objetivos{  
-  width: 200px;
-  height: auto;
-  min-height: 500px;
+  width: 160px;
+  height: 500px;
   margin: 10px 10px;
   float: left;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
 }
 
 .categoria-acciones{  
   width: 685px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -226,14 +215,13 @@
 
 .categoria-acciones:hover{  
   width: 685px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -241,14 +229,13 @@
 
 .categoria-metricas{  
   width: 685px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #13263c;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -256,14 +243,13 @@
 
 .categoria-metricas:hover{  
   width: 685px;
-  height: auto;
-  min-height: 300px;
+  height: 300px;
   margin: 10px 10px;
   float: left;
   background: #03A588;
   color: #fff;
-  align-items: center;
-  align-content: center;
+  //align-items: center;
+  //align-content: center;
   position: relative;
   cursor: pointer;
   overflow: scroll;
@@ -367,6 +353,11 @@
   padding: 20px 20px 40px 20px;
   margin: auto;
   margin-bottom: 70px;
+  
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
 }
 
 :host {
@@ -385,14 +376,6 @@
     }
   }
 
-  .videoOn{
-    display: inline;
-  }
-
-  .videoOff{
-    display: none;
-  }
-
   // #myVideo{
   //   display: none;
   // }
@@ -401,6 +384,26 @@
     float: left;
     margin-left: 10px;
   }
+
+  /*.toolbar {/*
+    left: 0;
+    bottom: 0;*/
+    /*position: fixed;
+    /*top: 180px;*/
+    /*right: 60px;
+    /*height:55px;/*
+    text-align: center;
+    position: fixed;*/
+    /*width: 100%;
+    /*background: transparent;/*
+    background-color: gold;
+    border: 10px solid gray;
+    border-bottom: 0;*/
+    /*color: gray;/*
+    font-size: -webkit-xxx-large;*/
+    /*font-weight: bold;
+  }*/
+
   .add-category{
     float: right;
     margin-left: auto;
@@ -648,15 +651,15 @@
     border: 2px solid green;*/
   }
 
-  .notas-listas > li{
+  .scope-container ul,li{
     list-style:none;
   }
-  .notas-listas{
+  .scope-container ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   }
-  .notas-listas >  li{
+  .scope-container ul li{
     text-decoration:none;
     color:#000;
     background:#ffc;
@@ -671,31 +674,31 @@
     transition: transform .15s linear;
   }
   
-  .notas-listas > li:nth-child(even){
+  .scope-container ul li:nth-child(even){
     transform:rotate(4deg);
     position:relative;
     top:5px;
     background:#cfc;
   }
-  .notas-listas > li:nth-child(3n){
+  .scope-container ul li:nth-child(3n){
     transform:rotate(-3deg);
     position:relative;
     top:-5px;
     background:#ccf;
   }
-  .notas-listas > li:nth-child(5n){
+  .scope-container ul li:nth-child(5n){
     transform:rotate(5deg);
     position:relative;
     top:-10px;
   }
   
-  .notas-listas > li:hover,ul li:focus{
+  .scope-container ul li:hover,ul li:focus{
     box-shadow:10px 10px 7px rgba(0,0,0,.7);
     transform: scale(1.25);
     position:relative;
     z-index:5;
   }
   
-  .notas-listas > li{
+  .scope-container ul li{
     margin:1em;
   }
