--- a/src/app/pages/dashboard-project/settings/settings.component.html
+++ b/src/app/pages/dashboard-project/settings/settings.component.html
@@ -17,18 +17,53 @@
         <div class="row mb-6">
           <label class="col-lg-4 col-form-label fw-bold fs-6">Proyecto</label>
           <div class="col-lg-8">
-            <div
-              class="image-input image-input-outline"
-              data-kt-image-input="true"
-              [style.background-image]="'url(./assets/media/avatars/blank.png'"
-            >
-              <div
-                class="image-input-wrapper w-125px h-125px"
-                [style.background-image]="
-                  'url(assets/media/svg/brand-logos/volicity-9.svg'
-                "
-              ></div>
-            </div>
+            <!--begin::Image input-->
+<div class="image-input image-input-empty" data-kt-image-input="true" [style.background-image]="'url(./assets/media/avatars/blank.png'">
+  
+  <div
+  class="image-input-wrapper w-125px h-125px"
+  [style.background-image]="
+    'url(assets/media/svg/brand-logos/volicity-9.svg'
+  "
+  ></div>
+  <!--end::Image preview wrapper-->
+
+  <!--begin::Edit button-->
+  <label class="btn btn-icon btn-circle btn-color-muted btn-active-color-primary w-25px h-25px bg-body shadow"
+  data-kt-image-input-action="change"
+  data-bs-toggle="tooltip"
+  data-bs-dismiss="click"
+  title="Change avatar">
+      <i class="fas fa-pencil fs-6"><span class="path1"></span><span class="path2"></span></i>
+
+      <!--begin::Inputs-->
+      <input type="file" name="avatar" accept=".png, .jpg, .jpeg" />
+      <input type="hidden" name="avatar_remove" />
+      <!--end::Inputs-->
+  </label>
+  <!--end::Edit button-->
+
+  <!--begin::Cancel button-->
+  <span class="btn btn-icon btn-circle btn-color-muted btn-active-color-primary w-25px h-25px bg-body shadow"
+  data-kt-image-input-action="cancel"
+  data-bs-toggle="tooltip"
+  data-bs-dismiss="click"
+  title="Cancel avatar">
+      <i class="ki-outline ki-cross fs-3"></i>
+  </span>
+  <!--end::Cancel button-->
+
+  <!--begin::Remove button-->
+  <span class="btn btn-icon btn-circle btn-color-muted btn-active-color-primary w-25px h-25px bg-body shadow"
+  data-kt-image-input-action="remove"
+  data-bs-toggle="tooltip"
+  data-bs-dismiss="click"
+  title="Remove avatar">
+      <i class="ki-outline ki-cross fs-3"></i>
+  </span>
+  <!--end::Remove button-->
+</div>
+<!--end::Image input-->
           </div>
         </div>
         <div class="row mb-6">
