--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -205,7 +205,7 @@
         <div class="card-title m-0">
           <!--begin::Avatar-->
           <div class="symbol symbol-50px w-50px bg-light">
-            <img src="assets/media/svg/brand-logos/plurk.svg" alt="image" class="p-3" />
+            <img [src]="(proyecto.equipos_equipo.equipo_proyecto[0].cloud_user ? proyecto.equipos_equipo.equipo_proyecto[0].cloud_user.secure_url : '')" (error)="imgError($event)" alt="image" class="p-3" />
           </div>
           <!--end::Avatar-->
         </div>
