ajustes de dias y loading en data proyecto

--- a/src/app/pages/dashboard-project/dashboard-project.component.html
+++ b/src/app/pages/dashboard-project/dashboard-project.component.html
@@ -1,3 +1,8 @@
+
+<!-- Seccion Loader-->  
+  <app-loadmask [loader]="isLoading" *ngIf="isLoading"></app-loadmask>
+<!-- Fin Seccion Loader--> 
+
 <div class="card mb-6 mb-xl-9">
   <div class="card-body pt-9 pb-0">
     <!--begin::Details-->
