--- a/src/app/pages/dashboard-project/settings/settings.component.html
+++ b/src/app/pages/dashboard-project/settings/settings.component.html
@@ -1,3 +1,7 @@
+<!-- Seccion Loader-->  
+<app-loadmask [loader]="isLoading" *ngIf="isLoading"></app-loadmask>
+<!-- Fin Seccion Loader--> 
+
 <div class="card mb-5 mb-xl-10">
   <div
     class="card-header border-0 cursor-pointer"
