--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
+<!-- Seccion Loader-->  
+<app-loadmask [loader]="isLoading" *ngIf="isLoading"></app-loadmask>
+<!-- Fin Seccion Loader--> 
+
 <div class="d-flex flex-wrap flex-stack my-5">
   <!--begin::Heading-->
   <h2 class="fs-2 fw-semibold my-2">Mis proyectos
@@ -75,7 +79,7 @@
     <!--begin::Budget-->
     <div class="card h-100">
       <div class="card-body p-9">
-        <div class="fs-2hx fw-bold">18</div>
+        <div class="fs-2hx fw-bold">{{num_proyectos * 6}}</div>
         <div class="fs-4 fw-semibold text-gray-400 mb-7">Días de Proyectos</div>
         <div class="fs-6 d-flex justify-content-between mb-4">
           <div class="fw-semibold">Días completados</div>
@@ -87,7 +91,7 @@
               <path opacity="0.3" d="M19.8 16.3L8.5 5H18.8C19.4 5 19.8 5.4 19.8 6V16.3Z" fill="currentColor" />
             </svg>
           </span>
-          <!--end::Svg Icon-->6</div>
+          <!--end::Svg Icon-->{{completadas}}</div>
         </div>
         <div class="separator separator-dashed"></div>
         <div class="fs-6 d-flex justify-content-between my-4">
@@ -100,7 +104,7 @@
               <path opacity="0.3" d="M19.8 8.5L8.5 19.8H18.8C19.4 19.8 19.8 19.4 19.8 18.8V8.5Z" fill="currentColor" />
             </svg>
           </span>
-          <!--end::Svg Icon-->10</div>
+          <!--end::Svg Icon-->{{dias}}</div>
         </div>
         <!--<div class="separator separator-dashed"></div>-->
       </div>
@@ -242,8 +246,8 @@
         </div>
         <!--end::Info-->
         <!--begin::Progress-->
-        <div class="h-4px w-100 bg-light mb-5" data-bs-toggle="tooltip" title="This project 50% completed">
-          <div class="bg-primary rounded h-4px" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="h-4px w-100 bg-light mb-5" data-bs-toggle="tooltip" title="Este proyecto esta {{proyecto.equipos_equipo.equipo_proyecto[0].etapa_activa!= '' && proyecto.equipos_equipo.equipo_proyecto[0].etapa_activa != undefined ? getCompleted(proyecto.equipos_equipo.equipo_proyecto[0].etapa_activa) : '0'}}% completado">
+          <div class="bg-primary rounded h-4px" role="progressbar" style="width: {{proyecto.equipos_equipo.equipo_proyecto[0].etapa_activa!= '' && proyecto.equipos_equipo.equipo_proyecto[0].etapa_activa != undefined ? getCompleted(proyecto.equipos_equipo.equipo_proyecto[0].etapa_activa) : '0'}}%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <!--end::Progress-->
         <!--begin::Users-->
