--- a/src/app/pages/bosquejar/bosquejar.component.scss
+++ b/src/app/pages/bosquejar/bosquejar.component.scss
@@ -39,7 +39,7 @@
   background: #13263c;
   color: #fff;
   align-items: center;
-  align-content: center;
+  /*align-content: center;*/
   position: relative;
   cursor: pointer;
   overflow: scroll;
