guardar foto de perfil

--- a/src/app/_metronic/layout/components/topbar/topbar.component.html
+++ b/src/app/_metronic/layout/components/topbar/topbar.component.html
@@ -113,7 +113,7 @@
     data-kt-menu-placement="bottom-end"
     data-kt-menu-flip="bottom"
   >
-    <img src="./assets/media/avatars/300-1.jpg" alt="metronic" />
+      <img alt="Foto" [src]="_user.img" (error)="imgError($event)"/>
   </div>
   <!-- end::Toggle  -->
   <app-user-inner></app-user-inner>
