--- a/src/app/pages/dashboard-project/overview/overview.component.html
+++ b/src/app/pages/dashboard-project/overview/overview.component.html
@@ -110,15 +110,17 @@
         </div>
         <!--end::Card title-->
         <!--begin::Card toolbar-->
-        <!--<div class="card-toolbar">
+        <div class="card-toolbar">
           <select name="status" data-control="select2" data-hide-search="true" class="form-select form-select-solid form-select-sm fw-bold w-150px">
-            <option value="1">2024 Enero</option>
-            <option value="2">2024 Febrero</option>
-            <option value="3">2024 Marzo</option>
-            <option value="4">2024 Abril</option>
-            <option value="5" selected="selected">2024 Mayo</option>
+            <option value="1">Día 1</option>
+            <option value="2">Día 2</option>
+            <option value="3">Día 3</option>
+            <option value="4">Día 4</option>
+            <option value="5">Día 5</option>
+            <option value="6">Día 6</option>
+            <option value="" selected="selected">Todos</option>
           </select>
-        </div>-->
+        </div>
         <!--end::Card toolbar-->
       </div>
       <!--end::Card header-->
