--- a/src/app/pages/users/account/account.component.html
+++ b/src/app/pages/users/account/account.component.html
@@ -8,7 +8,7 @@
             position-relative
           "
         >
-          <img src="./assets/media/avatars/300-1.jpg" alt="Metronic" />
+          <img [src]="user.img" (error)="imgError($event)" alt="Foto"/>
           <div
             class="
               position-absolute
