--- a/src/app/pages/users/account/settings/forms/profile-details/profile-details.component.html
+++ b/src/app/pages/users/account/settings/forms/profile-details/profile-details.component.html
@@ -25,9 +25,47 @@
               <div
                 class="image-input-wrapper w-125px h-125px"
                 [style.background-image]="
-                  'url(./assets/media/avatars/300-1.jpg'
-                "
+                  'url(./assets/media/avatars/300-1.jpg' 
+                " *ngIf="!imgView"
               ></div>
+              
+              <img [src]="imgView" (error)="imgError($event)" *ngIf="imgView"
+              class="image-input-wrapper w-125px h-125px">
+  
+              <!--begin::Edit button-->
+                <label class="btn btn-icon btn-circle btn-color-muted btn-active-color-primary w-25px h-25px bg-body shadow"
+                data-kt-image-input-action="change"
+                data-bs-toggle="tooltip"
+                data-bs-dismiss="click"
+                title="Cambiar foto">
+                    <i class="fas fa-pencil fs-6"><span class="path1"></span><span class="path2"></span></i>
+
+                    <!--begin::Inputs-->
+                    <input type="file" id="fileFoto" formControlName="foto" #fotoInput name="foto" accept=".png, .jpg, .jpeg" (change)="onFileSelected($event)">
+                    <input type="hidden" name="foto_remove" />
+                    <!--end::Inputs-->
+                </label>
+              <!--end::Edit button-->
+
+              <!--begin::Cancel button-->
+              <span class="btn btn-icon btn-circle btn-color-muted btn-active-color-primary w-25px h-25px bg-body shadow"
+              data-kt-image-input-action="cancel"
+              data-bs-toggle="tooltip"
+              data-bs-dismiss="click"
+              title="Cancelar foto">
+                  <i class="ki-outline ki-cross fs-3"></i>
+              </span>
+              <!--end::Cancel button-->
+
+              <!--begin::Remove button-->
+              <span class="btn btn-icon btn-circle btn-color-muted btn-active-color-primary w-25px h-25px bg-body shadow"
+              data-kt-image-input-action="remove"
+              data-bs-toggle="tooltip"
+              data-bs-dismiss="click"
+              title="Quitar Foto">
+                  <i class="ki-outline ki-cross fs-3"></i>
+              </span>
+              <!--end::Remove button-->
             </div>
           </div>
         </div>
